--- a/articles/templates/dinner.html
+++ b/articles/templates/dinner.html
@@ -1,19 +1,21 @@
+{% extends 'base.html' %} {% block content %}
 <h1>오늘 {{name}} 님의 저녁은 {{pick.name}} 입니다!</h1>
 
 <h1>메뉴 리스트</h1>
 <ul>
     {% for menu in menus %}
     <li>{{ menu.name }} {{ menu.price }}원</li>
-    {% endfor %}
-
-    
-
-    {% if pick.price < 10000 %}
-    <p>맛있겠다.</p>
-    {% elif pick.price < 30000 %}
-    <p>해볼만하다</p>
-    {% else%}
-    <p>고민해보자</p>
-    {% endif %}
-    
+    {% endfor %} 
 </ul>
+
+
+{% if pick.price < 10000 %}
+<p>맛있겠다.</p>
+{% elif pick.price < 30000 %}
+<p>해볼만하다</p>
+{% else%}
+<p>고민해보자</p>
+{% endif %}
+
+
+{% endblock %}
