--- a/articles/templates/dinner.html
+++ b/articles/templates/dinner.html
@@ -1,13 +1,8 @@
 {% extends 'base.html' %} {% block content %}
-<h1>오늘 {{name}} 님의 저녁은 {{pick.name}} 입니다!</h1>
-
-<h1>메뉴 리스트</h1>
-<ul>
-    {% for menu in menus %}
-    <li>{{ menu.name }} {{ menu.price }}원</li>
-    {% endfor %} 
-</ul>
-
+<h1>오늘 저녁 뭐 먹지?</h1>
+<br />
+<h1>오늘 당신의 저녁은 {{pick.name}} 입니다!</h1>
+<br />
 
 {% if pick.price < 10000 %}
 <p>맛있겠다.</p>
@@ -18,4 +13,26 @@
 {% endif %}
 
 
+
+<h1>메뉴 리스트</h1>
+<ul>
+    {% for menu in menus %}
+    <li>{{ menu.name }} {{ menu.price }}원</li>
+    {% endfor %} 
+</ul>
+
+
+
+<h1>리뷰 리스트</h1>
+<a href="{% url 'articles:review' %}"><p>리뷰 작성 페이지 이동</p></a>
+{% for article in articles %}
+<ul>
+<li>글 번호: {{ article.pk }} </li>
+<li>글 제목: {{ article.title }}</li>
+<li>글 내용: {{ article.content }}</li>
+<li>글 작성시간: {{article.created_at }}</li>
+<a href="{% url 'articles:detail' article.pk %}">[detail]</a>
+</ul>
+<hr />
+{% endfor %}
 {% endblock %}
