--- a/articles/templates/review.html
+++ b/articles/templates/review.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="{% url 'articles:review_result' %}" method="POST">
-        {% csrf_token %}
-        <label for="content">보낼 메시지</label>
-        <input type="text" name="content" />
-        <input type="submit" />
-    </form>
-</body>
-</html>
+{% extends 'base.html' %} {% block content %}
+
+<form 
+    class="form-group"
+    action="{% url 'articles:review_result' %}"
+    method="POST"
+>
+    {% csrf_token %}
+    <label for="title">Title: </label>
+    <input class="form-control" type="text" name="title" /><br />
+    <label for="content">Content: </label>
+    <textarea class="form-control" name="content" cols="30" rows="5"></textarea>
+    <br />
+    <input type="submit" />
+
+</form>
+
+
+{% endblock %}
