--- a/articles/templates/detail.html
+++ b/articles/templates/detail.html
@@ -5,6 +5,12 @@
 <p>제목: {{ article.title }}</p>
 <p>내용: {{ article.content }}</p>
 <p>작성 시각: {{ article.created_at|date:"SHORT_DATE_FORMAT" }}</p>
+<hr />
+<p>댓글</p>
+<p>{{ comment.user }}</p>
+<p>{{ comment.content }}</p>
+
+<hr>
 <a href="{% url 'articles:dinner' %}"><button class="btn btn-primary">오늘저녁뭐먹지 이동</button></a>
 <br /><br />
 <a href="{% url 'articles:edit' article.pk %}"><button class="btn btn-primary">리뷰 수정</button></a>
